--- a/streamlit/.streamlit/config.toml
+++ b/streamlit/.streamlit/config.toml
@@ -1,3 +1,12 @@
+[server]
+headless = true
+port = $PORT
+enableCORS = false
+
+[app]
+main_module = "streamlit/Vega_bryggeri.py"
+
+
 [theme]
 primaryColor="#ffbf00"
 backgroundColor="#292929"
