--- a/streamlit/.streamlit/config.toml
+++ b/streamlit/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor="#ffbf00"
+primaryColor="#FFBF00"
 backgroundColor="#292929"
-secondaryBackgroundColor="#2f4f4f"
-textColor="#fffdd0"
+secondaryBackgroundColor="#2F4F4F"
+textColor="#FFFDD0"
